# rust_sockets

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TUI_USAGE.md  archsockrust_ffi.h  build.rs
ArchSockRust.NET/: ArchSockRust.sln  README.md
ArchSockRust.NET/ArchSockRust.Interop/: ArchSockRust.Interop.csproj  NativeMethods.cs  P2PEventArgs.cs  P2PMessenger.cs
ArchSockRust.NET/ArchSockRust.TestApp/: ArchSockRust.TestApp.csproj  Program.cs
examples/csharp/: .gitignore  ArchSockRustCSharp.csproj  Program.cs  README.md
proto/: discovery.proto  messages.proto
src/: app.rs  cli.rs  error.rs  ffi.rs  lib.rs  main.rs  tui_main.rs
src/discovery/: mod.rs
src/events/: mod.rs
src/peer/: mod.rs  mod_old.rs
src/protocol/: discovery.rs  message.rs  mod.rs
tests/: discovery_tests.rs  e2e_tests.rs  integration_test.rs  unit_tests.rs
