[package]
name = "archsockrust"
version = "0.1.0"
edition = "2021"
description = "Modern P2P messaging library for local networks"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "archsockrust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # cdylib for C# interop, rlib for Rust binaries

[[bin]]
name = "archsockrust-cli"
path = "src/main.rs"

[[bin]]
name = "archsockrust-tui"
path = "src/tui_main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
prost = "0.13"
prost-types = "0.13"
uuid = { version = "1.0", features = ["v4"] }
local-ip-address = "0.6.3"
thiserror = "1.0"
# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"
# Time handling
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.13"
